done with bar-adaptive

--- a/index-bar.html
+++ b/index-bar.html
@@ -718,7 +718,6 @@
                     быстро заполнить макеты 
                     или прототипы содержимым. 
                 </p>
-                <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
                 </div>
             </li>
 
@@ -802,7 +801,6 @@
                     быстро заполнить макеты 
                     или прототипы содержимым. 
                 </p>
-                <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
                </div>
             </li>
 
@@ -930,7 +928,6 @@
                     быстро заполнить макеты 
                     или прототипы содержимым. 
                 </p>
-                <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
                </div>
 
             </li>
@@ -955,7 +952,6 @@
                     быстро заполнить макеты 
                     или прототипы содержимым. 
                 </p>
-                <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
             </div>
         </li>
     </ul>
@@ -1013,22 +1009,6 @@
 				</p>
 			</div>
 		</div>
-		<div class="bar-edge-item bar-edge-item-3">
-			<div class="bar-edge-item-img">
-				<img src="img/bar-page/bar-man.png" alt="">
-			</div>
-			<div class="bar-edge-description bar-edge-description-3">
-				<h2>
-					        СОБСТВЕННОЕ
-					<span>ПРОИЗВОДСТВО МЕБЕЛИ</span>
-				</h2>
-				<p>
-					Современное оборудование и профессиональные
-					работники нашего собственного производства
-					помогут вас реализовать проект любой сложности!					
-				</p>
-			</div>
-		</div>
 		<div class="bar-edge-item bar-edge-item-2">
 			<div class="bar-edge-item-img">
 				<img src="img/bar-page/coffee-island.jpg" alt="">
@@ -1047,7 +1027,23 @@
 
 				</h2>
 			</div>
-	    </div>
+		</div>
+		<div class="bar-edge-item bar-edge-item-3">
+			<div class="bar-edge-item-img">
+				<img src="img/bar-page/bar-man.png" alt="">
+			</div>
+			<div class="bar-edge-description bar-edge-description-3">
+				<h2>
+					        СОБСТВЕННОЕ
+					<span>ПРОИЗВОДСТВО МЕБЕЛИ</span>
+				</h2>
+				<p>
+					Современное оборудование и профессиональные
+					работники нашего собственного производства
+					помогут вас реализовать проект любой сложности!					
+				</p>
+			</div>
+		</div>
 	</div>
 	<div class="use-materials-title">
 		<h2><span>Используемые</span> материалы</h2>
@@ -1264,10 +1260,10 @@
 			<div class="other-elem-img-item">
 				<img src="img/bar-page/linters.jpg" alt="">
 			</div>
-			<div class="other-elem-img-item">
+			<div class="other-elem-img-item other-elem-img-item-2">
 				<img src="img/bar-page/wood-panel.jpg" alt="">
 			</div>
-			<div class="other-elem-img-item">
+			<div class="other-elem-img-item other-elem-img-item-3">
 				<img src="img/bar-page/mirrors.jpg" alt="">
 			</div>
 		</div>
