--- a/index-bar.html
+++ b/index-bar.html
@@ -1051,7 +1051,7 @@
 	<div class="use-materials">
 		<div class="use-materials-item use-materials-item-1">
 			<div class="use-materials-item-img">
-				<img src="img/test-photo/test-bar-3.jpg" alt="">
+				<img src="img/bar-page/Metal.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>МЕТАЛЛ</span>
@@ -1066,7 +1066,7 @@
 		</div>
 		<div class="use-materials-item use-materials-item-2">
 			<div class="use-materials-item-img">
-				<img src="img/test-photo/test-bar-3.jpg" alt="">
+				<img src="img/bar-page/Glass.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>СТЕКЛО</span>
@@ -1082,7 +1082,7 @@
 		</div>
 		<div class="use-materials-item use-materials-item-3">
 			<div class="use-materials-item-img">
-				<img src="img/test-photo/test-bar-3.jpg" alt="">
+				<img src="img/bar-page/wood.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>ДЕРЕВО</span>
@@ -1098,7 +1098,7 @@
 		</div>
 		<div class="use-materials-item use-materials-item-4">
 			<div class="use-materials-item-img">
-				<img src="img/test-photo/test-bar-3.jpg" alt="">
+				<img src="img/bar-page/plastic.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>ПЛАСТИК</span>
@@ -1113,7 +1113,7 @@
 		</div>
 		<div class="use-materials-item use-materials-item-5">
 			<div class="use-materials-item-img">
-				<img src="img/test-photo/test-bar-3.jpg" alt="">
+				<img src="img/bar-page/stone.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>КАМЕНЬ</span>
