decstop oborudovanie done

--- a/index-bar.html
+++ b/index-bar.html
@@ -1030,7 +1030,7 @@
 		</div>
 		<div class="bar-edge-item bar-edge-item-3">
 			<div class="bar-edge-item-img">
-				<img src="img/bar-page/bar-man.png" alt="">
+				<img src="img/bar-page/our-2.jpg" alt="">
 			</div>
 			<div class="bar-edge-description bar-edge-description-3">
 				<h2>
