--- a/index-equipment.html
+++ b/index-equipment.html
@@ -824,7 +824,7 @@
 	</div>
 </div>
 <div class="container">
-	<div class="form-box">
+	<div class=" eq-form-box eq-form-box-1">
 		<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
     </div>
     <a href="#3" class="goods__banner eq-banner">
@@ -956,7 +956,7 @@
 				</div>
             </div>
 		</div>
-		<div class="form-box">
+		<div class="form-box eq-form-box eq-form-box-2">
 			<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
 		</div>
 		<a href="#3" class="goods__banner eq-banner">
