--- a/index-equipment.html
+++ b/index-equipment.html
@@ -743,7 +743,7 @@
               <a href="#">  
                 <div class="top-photo first-right place-item-img-1">
                     <img src="img/equipment/Диваны.jpg" alt="" >
-                    <div class="goods-eq-title"><span>Диваны</span></div>
+                    <div class="goods-eq-title goods-eq-title-big"><span>Диваны</span></div>
                 </div>
               </a> 
             </div>
