--- a/index-main.html
+++ b/index-main.html
@@ -797,7 +797,7 @@
                 наличие самого текста или продемонстрировать
                 типографику в деле.                
             </p>
-           <a href=""><div class="more-btn main-more-btn main-more-btn-bussiness">ПОДРОБНЕЕ</div></a>
+           <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn main-more-btn-bussiness">ПОДРОБНЕЕ</div></a>
         </div>
         <div class="bussiness-items first-item first-main-item">
             <img src="img/main-page/design-project.jpg" alt="">
@@ -806,7 +806,7 @@
             <img src="img/test-photo/test-5.jpg" alt="">
         </div>
     </div>
-    <a href="#3" class="goods__banner">
+    <a href="#3" class="goods__banner main-goods__banner">
         <div class="goods__banner_content">
             <span class="goods__banner_link"><span>ПОКУПКА МЕБЕЛИ 
                 В ЛИЗИНГ  </span></span>
@@ -818,7 +818,7 @@
     <div class="container">
         <div class="title"><span>Мебель для Ресторанов</span></div>
 	</div>
-	<div class="container">
+	<div class="container main-grid-container">
         <div class="main-grid-photos">
             <div class="main-left">
 				<div class="main-left-items">
@@ -840,7 +840,7 @@
                     наличие самого текста или продемонстрировать
                     типографику в деле.                
                 </p>
-               <a href="#"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
+               <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
             </div>
             <div class="main-right">
                 <div class="main-right-top">
@@ -848,7 +848,7 @@
 					    <img src="img/main-page/right-photo-bot-2.jpg" alt="">
 					</div>
 					<div class="top-photo first-right">
-					    <img src="img/main-page/right-photo-top-1.jpg" alt="" style="margin-right: 22px;">
+					    <img src="img/main-page/right-photo-top-1.jpg" alt="">
 					</div>
 					<div class="top-photo right-top-last">
 					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
@@ -859,10 +859,10 @@
 					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
 					</div>
 					<div class="bottom-photo first-right">
-					    <img src="img/main-page/right-photo-bot-1.jpg" alt="" style="margin-right: 22px;">
+					    <img src="img/main-page/right-photo-bot-1.jpg" alt="">
 					</div>
 					<div class="bottom-photo right-bottom-last">
-					   <img src="img/main-page/right-photo-bot-2.jpg"  alt="">
+					   <img src="img/main-page/right-bot-photo-2.jpg"  alt="">
 				    </div>
                 </div>
             </div>
@@ -888,7 +888,7 @@
             </div>
 		</div>
 		<div class="grid-description mainp-text-grid">
-			<div class="text-grid mainp-grid-description">
+			<div class="text-grid mainp-grid-description mainp-grid-description-style">
 				<h2>
 					СТИЛЬ, УЮТ И УДОБСТВО
 				</h2>
@@ -902,7 +902,7 @@
 				</p>
 			</div>
 				<div class="more-button">
-					<a href="#"><div class="more-btn main-more-btn style-mainp-grid-description">ПОДРОБНЕЕ</div></a>
+					<a href="#" class="main-more-btn-wr main-more-btn-wr-style"><div class="more-btn main-more-btn style-mainp-grid-description">ПОДРОБНЕЕ</div></a>
 				</div>
 		</div>
     </div>
@@ -914,11 +914,15 @@
             <img src="img/banner_1.jpg" alt="banner" class="goods__banner_img">
     </a>
 </div>
-<div class="container">
-	<div class="title"><span>Торговая мебель</span></div>
+<div class="container">	<div class="title"><span>Торговая мебель</span></div></div>
+<div class="container main-grid-container">
 	<div class="trade-box">
+		<div class="trade-wrapper">
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
+		</div>	
+		<div class="trade-wrapper">
 			<img src="img/main-page/trade-2.png" class="trade-style trade-style-img" alt="">
+		</div>
 	         <div class="adap-trade">
 				 <div class="trade-3">
 				    <img src="img/main-page/trade-3.png" alt="">
@@ -941,9 +945,11 @@
                     наличие самого текста или продемонстрировать
                     типографику в деле.                
                 </p>
-               <a href="#"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
-            </div>
-			<img src="img/main-page/trade-4.jpg" class="trade-style last-trade trade-style-img" alt="">
+               <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
+			</div>
+			<div class="trade-wrapper">
+			   <img src="img/main-page/trade-4.jpg" class="trade-style last-trade trade-style-img" alt="">
+		    </div>
 	</div>
 </div>
 <div class="container">
@@ -970,7 +976,7 @@
 					или прототипы содержимым. 
 				</p>
 		    </div>
-			<a href="#"><div class="more-btn main-more-btn production-btn">ПРИМЕРЫ РАБОТ</div></a>
+			<a href="#" class="main-more-btn-wr product-btn"><div class="more-btn main-more-btn production-btn">ПРИМЕРЫ РАБОТ</div></a>
 		</div>
 		<div class="production-item first-prod">
 			<img src="img/main-page/producntion.png" alt="prod.">
@@ -1225,6 +1231,7 @@
 		<div class="title-news-item title-news-item-first">
 			<span>АКЦИИ</span>
 		</div>
+		<div class="middle-line"></div>
 		<div class="title-news-item title-news-item-second">
 			<span>
 				НОВОСТИ
@@ -1235,16 +1242,36 @@
 		<span>АКЦИИ</span>
 	</div>
 <div class="news">
-	<div class="news-wrapper">
-		<div class="news-wrapper-item news-wrapper-item-on">
-			<div class="stock stock-on">
-				<div class="stock-img">
-					<img src="img/main-page/coffee-table.png" alt="coffee_table">
-					<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+	<div class="news-side" style="margin-right: 60px; justify-content: flex-end;">
+		<div class="news-wrapper" style="margin-right: 29px;">
+			<div class="stock">
+				<div class="stock-item">
+					<div class="stock-img">
+						<img src="img/main-page/coffee-table.png" alt="coffee_table">
+						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+					</div>
+					<div class="stock-img-description">
+						<span>С 15 марта по 15 апреля</span>
+						<p>
+						Рыбатекст используется дизайнерами,
+						проектировщиками и фронтендерами,
+						когда нужно быстро заполнить макеты
+						или прототипы содержимым. 
+						</p>
+					</div>
 				</div>
+			</div>
+		</div>
+		<div class="news-wrapper">
+			<div class="stock">
+				<div class="stock-item">
+					<div class="stock-img">
+						<img src="img/main-page/coffee-table.png" alt="coffee_table">
+						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+					</div>
 				<div class="stock-img-description">
+					<span>С 15 марта по 15 апреля</span>
 					<p>
-					<span>С 15 марта по 15 апреля</span><br>
 					Рыбатекст используется дизайнерами,
 					проектировщиками и фронтендерами,
 					когда нужно быстро заполнить макеты
@@ -1252,65 +1279,70 @@
 					</p>
 				</div>
 			</div>
-		</div>
-	<div class="news-wrapper-item">
-		<div class="stock first-stock">
-			<div class="stock-img">
-				<img src="img/main-page/coffee-table.png" alt="coffee_table">
-				<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
-			</div>
-			<div class="stock-img-description">
-				<p>
-				<span>С 15 марта по 15 апреля</span><br>
-				Рыбатекст используется дизайнерами,
-				проектировщиками и фронтендерами,
-				когда нужно быстро заполнить макеты
-				или прототипы содержимым. 
-				</p>
-			</div>
-		</div>
-		<div class="stock">
-			<div class="stock-img">
-				<img src="img/main-page/coffee-table.png" alt="coffee_table">
-				<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
-			</div>
-			<div class="stock-img-description">
-				<p>
-				<span>С 15 марта по 15 апреля</span><br>
-				Рыбатекст используется дизайнерами,
-				проектировщиками и фронтендерами,
-				когда нужно быстро заполнить макеты
-				или прототипы содержимым. 
-				</p>
-			</div>
-		</div>
-	</div>
-	</div>
-	<div class="container this-container">
-		<div class="title title-hidden">
-			<span>НОВОСТИ</span>
-		</div>
-    </div>
-	
-     <div class="news-anwrapper">
-		<div class="news-wrapper-item">
-			<div class="stock right-first-stock">
-				<img src="img/main-page/kitchen.png" alt="kitchen">
-				<div class="right-text-wrapper">
-					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-						В ЦЕНТРЕ МОСКВЫ</h2>
-					<p>
+		
+				<div class="stock-item">
+					<div class="stock-img">
+						<img src="img/main-page/coffee-table.png" alt="coffee_table">
+						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+					</div>
+					<div class="stock-img-description">
+						<span>С 15 марта по 15 апреля</span>
+						<p>
 						Рыбатекст используется дизайнерами,
-						проектировщиками и фронтендерами, когда
-						нужно быстро заполнить макеты или прототипы 
-						содержимым. Это тестовый контент, который
-						не должен нести никакого смысла, лишь показать
-						наличие самого текста или продемонстрировать
-						типографику в деле.<br>
-						<span>15 апреля</span> 
-					</p>
-			   </div>
+						проектировщиками и фронтендерами,
+						когда нужно быстро заполнить макеты
+						или прототипы содержимым. 
+						</p>
+					</div>
+				</div>
 			</div>
+		</div>
+	</div>
+		<div class="container this-container">
+			<div class="title title-hidden">
+				<span>НОВОСТИ</span>
+			</div>
+		</div>
+	<div class="news-side" style="margin-left: 61px;">
+		<div class="news-wrapper">
+			<div class="stock">
+				<div class="stock-item">
+					<img src="img/main-page/kitchen.png" alt="kitchen">
+					<div class="right-text-wrapper">
+						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+							В ЦЕНТРЕ МОСКВЫ</h2>
+						<p>
+							Рыбатекст используется дизайнерами,
+							проектировщиками и фронтендерами, когда
+							нужно быстро заполнить макеты или прототипы 
+							содержимым. Это тестовый контент, который
+							не должен нести никакого смысла, лишь показать
+							наличие самого текста или продемонстрировать
+							типографику в деле.<br>
+							<span>15 апреля</span> 
+						</p>
+				</div>
+				</div>
+				<div class="stock-item">
+					<img src="img/main-page/kitchen.png" alt="kitchen">
+					<div class="right-text-wrapper">
+						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+							В ЦЕНТРЕ МОСКВЫ</h2>
+						<p>
+							Рыбатекст используется дизайнерами,
+							проектировщиками и фронтендерами, когда
+							нужно быстро заполнить макеты или прототипы 
+							содержимым. Это тестовый контент, который
+							не должен нести никакого смысла, лишь показать
+							наличие самого текста или продемонстрировать
+							типографику в деле.<br>
+							<span>15 апреля</span> 
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="news-wrapper" style="margin-left: 29px;">
 			<div class="stock">
 				<img src="img/main-page/kitchen.png" alt="kitchen">
 				<div class="right-text-wrapper">
@@ -1326,28 +1358,11 @@
 						типографику в деле.<br>
 						<span>15 апреля</span> 
 					</p>
-			    </div>
+				</div>
 			</div>
 		</div>
-		<div class="news-wrapper-item news-wrapper-item-off">
-			<div class="stock stock-off">
-				<img src="img/main-page/kitchen.png" alt="kitchen">
-				<div class="right-text-wrapper">
-					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-						В ЦЕНТРЕ МОСКВЫ</h2>
-					<p>
-						Рыбатекст используется дизайнерами,
-						проектировщиками и фронтендерами, когда
-						нужно быстро заполнить макеты или прототипы 
-						содержимым. Это тестовый контент, который
-						не должен нести никакого смысла, лишь показать
-						наличие самого текста или продемонстрировать
-						типографику в деле.<br>
-						<span>15 апреля</span> 
-					</p>
-			    </div>
-			</div>
-		</div>
+    </div>
+
 	 </div>
 	</div>
 </div>
