--- a/index-main.html
+++ b/index-main.html
@@ -868,9 +868,10 @@
             </div>
 		</div>
 	</div>
-
 <div class="container">
-    <div class="title"><span>Мебель для Отелей</span></div>
+	<div class="title"><span>Мебель для Отелей</span></div>
+</div>
+<div class="container main-grid-container">
     <div class="images-grid">
         <div class="box-image mainp-box-image">
             <div class="left-photos left-mainp-photos">
@@ -906,7 +907,9 @@
 				</div>
 		</div>
     </div>
-    <a href="#3" class="goods__banner">
+</div>
+<div class="container">
+	<a href="#3" class="goods__banner">
         <div class="goods__banner_content">
             <span class="goods__banner_link"><span>ПОКУПКА МЕБЕЛИ 
                 В ЛИЗИНГ  </span></span>
@@ -914,8 +917,8 @@
             <img src="img/banner_1.jpg" alt="banner" class="goods__banner_img">
     </a>
 </div>
-<div class="container">	<div class="title"><span>Торговая мебель</span></div></div>
-<div class="container main-grid-container">
+<div class="container">
+	<div class="title"><span>Торговая мебель</span></div>
 	<div class="trade-box">
 		<div class="trade-wrapper">
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
@@ -1280,7 +1283,7 @@
 				</div>
 			</div>
 		
-				<div class="stock-item">
+				<div class="stock-item" style="margin-right: 0;">
 					<div class="stock-img">
 						<img src="img/main-page/coffee-table.png" alt="coffee_table">
 						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
@@ -1319,8 +1322,8 @@
 							не должен нести никакого смысла, лишь показать
 							наличие самого текста или продемонстрировать
 							типографику в деле.<br>
-							<span>15 апреля</span> 
 						</p>
+						<span>15 апреля</span> 
 				</div>
 				</div>
 				<div class="stock-item">
@@ -1336,14 +1339,15 @@
 							не должен нести никакого смысла, лишь показать
 							наличие самого текста или продемонстрировать
 							типографику в деле.<br>
-							<span>15 апреля</span> 
 						</p>
+						<span>15 апреля</span> 
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="news-wrapper" style="margin-left: 29px;">
 			<div class="stock">
+				<div class="stock-item" style="margin-right: 0;">
 				<img src="img/main-page/kitchen.png" alt="kitchen">
 				<div class="right-text-wrapper">
 					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
@@ -1356,9 +1360,10 @@
 						не должен нести никакого смысла, лишь показать
 						наличие самого текста или продемонстрировать
 						типографику в деле.<br>
-						<span>15 апреля</span> 
 					</p>
+					<span>15 апреля</span> 
 				</div>
+			  </div>
 			</div>
 		</div>
     </div>
