--- a/index-main.html
+++ b/index-main.html
@@ -845,24 +845,24 @@
             <div class="main-right">
                 <div class="main-right-top">
 					<div class="top-photo img-change">
-					    <img src="img/main-page/right-photo-bot-2.jpg" alt="">
+					    <img src="img/main-page/right-photo-bot-390.jpg" alt="">
 					</div>
 					<div class="top-photo first-right">
 					    <img src="img/main-page/right-photo-top-1.jpg" alt="">
 					</div>
 					<div class="top-photo right-top-last">
-					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
+						<img src="img/main-page/left-photo-bot-338.jpg" alt="">
 				    </div>
                 </div>
                 <div class="main-right-bottom">
 					<div class="bottom-photo img-change">
-					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
+					    <img src="img/main-page/left-top-318.jpg" alt="">
 					</div>
 					<div class="bottom-photo first-right">
 					    <img src="img/main-page/right-photo-bot-1.jpg" alt="">
 					</div>
 					<div class="bottom-photo right-bottom-last">
-					   <img src="img/main-page/right-bot-photo-2.jpg"  alt="">
+					   <img src="img/main-page/right-photo-410.jpg"  alt="">
 				    </div>
                 </div>
             </div>
@@ -919,6 +919,8 @@
 </div>
 <div class="container">
 	<div class="title"><span>Торговая мебель</span></div>
+</div>
+<div class="container main-grid-container">
 	<div class="trade-box">
 		<div class="trade-wrapper">
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
