--- a/index-bar.html
+++ b/index-bar.html
@@ -1049,7 +1049,7 @@
 		<h2><span>Используемые</span> материалы</h2>
 	</div>
 	<div class="use-materials">
-		<div class="use-materials-item use-materials-item-1">
+		<div class="use-materials-item use-materials-item-1 use-materials-item-1-bar">
 			<div class="use-materials-item-img">
 				<img src="img/bar-page/Metal.jpg" alt="">
 			</div>
@@ -1064,7 +1064,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="use-materials-item use-materials-item-2">
+		<div class="use-materials-item use-materials-item-2 use-materials-item-2-bar">
 			<div class="use-materials-item-img">
 				<img src="img/bar-page/Glass.jpg" alt="">
 			</div>
@@ -1128,7 +1128,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="forma-title">
+	<div class="forma-title bar-forma-title">
 		<h2>
 			<span class="weight">ОСТАВТЕ ЗАЯВКУ</span>
 								И МЫ СВЯЖЕМСЯ С ВАМИ<br> 
@@ -1136,7 +1136,7 @@
 		</h2>
 	</div>
 	<div class="form-box">
-		<form class="evenform" method="post" action="">
+		<form class="evenform bar-form" method="post" action="">
 			<select class="styler styler-top" data-placeholder="Выберите тип заведения:">
 				<option></option>
 				<option class="styler" value="0">Дом</option>
@@ -1344,7 +1344,7 @@
 			</div>
 		  </div>
 	</div>
-	<div class="example_2">
+	<div class="example_2 bar-example_2">
 		<div class="example_item example-2-item">
 			<img src="img/villa1.jpg" alt="example">
 			<div class="example-text">
