--- a/index-equipment.html
+++ b/index-equipment.html
@@ -1054,7 +1054,7 @@
 			<input type="text" placeholder="Площадь кухонных момещений:">
 			<input type="text" placeholder="Количество посадочных мест:">
 			<input type="text" placeholder="Приблизительная дата открытия:">
-			<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn" type="submit">
+			<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn eq-form-btn" type="submit">
 		  </form>
 		</div>
 </div>
