finally finished main page

--- a/index-main.html
+++ b/index-main.html
@@ -822,7 +822,7 @@
         <div class="main-grid-photos">
             <div class="main-left">
 				<div class="main-left-items">
-					<img src="img/main-page/left-photo-top.jpg" alt="" style="margin-bottom: 16px;">
+					<img src="img/main-page/left-photo-top.jpg" alt="" style="margin-bottom: 10px;">
 					<img src="img/main-page/left-photo-bot.jpg" alt="">
 			    </div>
             </div>
@@ -851,7 +851,8 @@
 					    <img src="img/main-page/right-photo-top-1.jpg" alt="">
 					</div>
 					<div class="top-photo right-top-last">
-						<img src="img/main-page/left-photo-bot-338.jpg" alt="">
+						<img class='small-1' src="img/main-page/left-photo-bot-338.jpg" alt="">
+						<img class='big-1' src="img/main-page/right-photo-top-2.jpg" alt="">
 				    </div>
                 </div>
                 <div class="main-right-bottom">
@@ -862,7 +863,8 @@
 					    <img src="img/main-page/right-photo-bot-1.jpg" alt="">
 					</div>
 					<div class="bottom-photo right-bottom-last">
-					   <img src="img/main-page/right-photo-410.jpg"  alt="">
+						<img class="big-1" src="img/main-page/on_change-318.jpg"  alt="">
+					   <img class="small-1" src="img/main-page/right-photo-410.jpg"  alt="">
 				    </div>
                 </div>
             </div>
@@ -875,7 +877,7 @@
     <div class="images-grid">
         <div class="box-image mainp-box-image">
             <div class="left-photos left-mainp-photos">
-				<div class="yellow">
+				<div class="yellow main-yellow">
 				   <img src="img/yellow-1.png" alt="forniture">
 				</div>
 				<div class="grid-img">
@@ -920,7 +922,7 @@
 <div class="container">
 	<div class="title"><span>Торговая мебель</span></div>
 </div>
-<div class="container main-grid-container">
+<div class="container main-grid-container bar-container">
 	<div class="trade-box">
 		<div class="trade-wrapper">
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
@@ -1247,8 +1249,8 @@
 		<span>АКЦИИ</span>
 	</div>
 <div class="news">
-	<div class="news-side" style="margin-right: 60px; justify-content: flex-end;">
-		<div class="news-wrapper" style="margin-right: 29px;">
+	<div class="news-side" style="margin-right: 60px; justify-content: flex-end; align-items: flex-start;">
+		<div class="news-wrapper" style="margin-right: 29px; align-self: center;">
 			<div class="stock">
 				<div class="stock-item">
 					<div class="stock-img">
