я проверил барные стойки

--- a/index-bar.html
+++ b/index-bar.html
@@ -963,6 +963,7 @@
     <div class="title">
         <span>Барные стойки</span>
 	</div>
+</div>	
 	<div class="bar-stand">
 		<div class="bar-stand-item bar-stand-item-1">
 			 <div class="bar-stand-img">
@@ -1154,6 +1155,8 @@
 		<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn" type="submit">
 	  </form>
 	</div>
+
+<div class="container">
 	<a href="#3" class="goods__banner">
 		<div class="goods__banner_content">
 			<span class="goods__banner_link"><span>ПОКУПКА МЕБЕЛИ 
