--- a/index-bar.html
+++ b/index-bar.html
@@ -1129,32 +1129,34 @@
 			</div>
 		</div>
 	</div>
-	<div class="forma-title bar-forma-title">
-		<h2>
-			<span class="weight">ОСТАВТЕ ЗАЯВКУ</span>
-								И МЫ СВЯЖЕМСЯ С ВАМИ<br> 
-								С ДЕТАЛЬНЫМ ПРЕДЛОЖЕНИЕМ
-		</h2>
-	</div>
-	<div class="form-box">
-		<form class="evenform bar-form" method="post" action="">
-			<select class="styler styler-top" data-placeholder="Выберите тип заведения:">
-				<option></option>
-				<option class="styler" value="0">Дом</option>
-				<option class="styler" value="1">Офис</option>
-				<option class="styler" value="2">Бар</option>
-				<option class="styler" value="3">Ресторан</option>
-				<option class="styler" value="4">Кафе</option>
-				<option class="styler" value="5">Что-то</option>
-				<option class="styler" value="6">Что-то ещё</option>
-			</select>
-		<input type="text" placeholder="Гостевая площадь:">
-		<input type="text" placeholder="Площадь кухонных момещений:">
-		<input type="text" placeholder="Количество посадочных мест:">
-		<input type="text" placeholder="Приблизительная дата открытия:">
-		<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn" type="submit">
-	  </form>
-	</div>
+	<div class="container">
+		<div class="forma-title bar-forma-title">
+			<h2>
+				<span class="weight">ОСТАВТЕ ЗАЯВКУ</span>
+									И МЫ СВЯЖЕМСЯ С ВАМИ<br> 
+									С ДЕТАЛЬНЫМ ПРЕДЛОЖЕНИЕМ
+			</h2>
+		</div>
+		<div class="form-box">
+			<form class="evenform bar-form" method="post" action="">
+				<select class="styler styler-top" data-placeholder="Выберите тип заведения:">
+					<option></option>
+					<option class="styler" value="0">Дом</option>
+					<option class="styler" value="1">Офис</option>
+					<option class="styler" value="2">Бар</option>
+					<option class="styler" value="3">Ресторан</option>
+					<option class="styler" value="4">Кафе</option>
+					<option class="styler" value="5">Что-то</option>
+					<option class="styler" value="6">Что-то ещё</option>
+				</select>
+			<input type="text" placeholder="Гостевая площадь:">
+			<input type="text" placeholder="Площадь кухонных момещений:">
+			<input type="text" placeholder="Количество посадочных мест:">
+			<input type="text" placeholder="Приблизительная дата открытия:">
+			<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn" type="submit">
+		</form>
+		</div>
+    </div>
 
 <div class="container">
 	<a href="#3" class="goods__banner">
