--- a/index-main.html
+++ b/index-main.html
@@ -1253,10 +1253,12 @@
 		<div class="news-wrapper" style="margin-right: 29px; align-self: center;">
 			<div class="stock">
 				<div class="stock-item">
-					<div class="stock-img">
-						<img src="img/main-page/coffee-table.png" alt="coffee_table">
-						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
-					</div>
+					<a href="#">
+						<div class="stock-img">
+							<img src="img/main-page/coffee-table.png" alt="coffee_table">
+							<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+						</div>
+				    </a>
 					<div class="stock-img-description">
 						<span>С 15 марта по 15 апреля</span>
 						<p>
@@ -1272,10 +1274,12 @@
 		<div class="news-wrapper">
 			<div class="stock">
 				<div class="stock-item">
-					<div class="stock-img">
-						<img src="img/main-page/coffee-table.png" alt="coffee_table">
-						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
-					</div>
+					<a href="#">
+						<div class="stock-img">
+							<img src="img/main-page/coffee-table.png" alt="coffee_table">
+							<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+						</div>
+				    </a>
 				<div class="stock-img-description">
 					<span>С 15 марта по 15 апреля</span>
 					<p>
@@ -1288,10 +1292,12 @@
 			</div>
 		
 				<div class="stock-item" style="margin-right: 0;">
-					<div class="stock-img">
-						<img src="img/main-page/coffee-table.png" alt="coffee_table">
-						<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
-					</div>
+					<a href="#">
+						<div class="stock-img">
+							<img src="img/main-page/coffee-table.png" alt="coffee_table">
+							<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+						</div>
+				    </a>
 					<div class="stock-img-description">
 						<span>С 15 марта по 15 апреля</span>
 						<p>
@@ -1314,7 +1320,7 @@
 		<div class="news-wrapper">
 			<div class="stock">
 				<div class="stock-item">
-					<img src="img/main-page/kitchen.png" alt="kitchen">
+					<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 					<div class="right-text-wrapper">
 						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
 							В ЦЕНТРЕ МОСКВЫ</h2>
@@ -1331,7 +1337,7 @@
 				</div>
 				</div>
 				<div class="stock-item">
-					<img src="img/main-page/kitchen.png" alt="kitchen">
+					<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 					<div class="right-text-wrapper">
 						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
 							В ЦЕНТРЕ МОСКВЫ</h2>
@@ -1352,7 +1358,7 @@
 		<div class="news-wrapper" style="margin-left: 29px;">
 			<div class="stock">
 				<div class="stock-item" style="margin-right: 0;">
-				<img src="img/main-page/kitchen.png" alt="kitchen">
+				<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 				<div class="right-text-wrapper">
 					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
 						В ЦЕНТРЕ МОСКВЫ</h2>
