--- a/index-bar.html
+++ b/index-bar.html
@@ -994,7 +994,7 @@
 	</div>
 	<div class="bar-edge">
 		<div class="bar-edge-item bar-edge-item-1">
-			<div class="bar-edge-item-img">
+			<div class="bar-edge-item-img bar-edge-item-img-1">
 				<img src="img/bar-page/kafe-and-rest.jpg" alt="">
 			</div>
 			<div class="bar-edge-description bar-edge-description-right">
@@ -1004,7 +1004,7 @@
 				<p>
 					Гнутые линии, ломанные поверхности,
 					сложные соединения и максимальная 
-					красота и функциональность.
+					красота и функциональность.<br>
 					Мы сделаем барную стойку такой,
 					какой ее запланировали Вы!					
 				</p>
@@ -1052,7 +1052,8 @@
 	<div class="use-materials">
 		<div class="use-materials-item use-materials-item-1 use-materials-item-1-bar">
 			<div class="use-materials-item-img">
-				<img src="img/bar-page/Metal.jpg" alt="">
+				<img class="big-ph" src="img/bar-page/Metal.jpg" alt="">
+				<img class="sm-ph" src="img/bar-page/Metal_small.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>МЕТАЛЛ</span>
