--- a/index-main.html
+++ b/index-main.html
@@ -1322,8 +1322,10 @@
 				<div class="stock-item">
 					<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 					<div class="right-text-wrapper">
+					  <a href="#">
 						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
 							В ЦЕНТРЕ МОСКВЫ</h2>
+					  </a>	
 						<p>
 							Рыбатекст используется дизайнерами,
 							проектировщиками и фронтендерами, когда
@@ -1339,8 +1341,10 @@
 				<div class="stock-item">
 					<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 					<div class="right-text-wrapper">
+					  <a href="#">
 						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
 							В ЦЕНТРЕ МОСКВЫ</h2>
+					  </a>
 						<p>
 							Рыбатекст используется дизайнерами,
 							проектировщиками и фронтендерами, когда
@@ -1360,8 +1364,10 @@
 				<div class="stock-item" style="margin-right: 0;">
 				<a href="#"><img src="img/main-page/kitchen.png" alt="kitchen"></a>
 				<div class="right-text-wrapper">
-					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-						В ЦЕНТРЕ МОСКВЫ</h2>
+					  <a href="#">
+						<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+							В ЦЕНТРЕ МОСКВЫ</h2>
+					  </a>
 					<p>
 						Рыбатекст используется дизайнерами,
 						проектировщиками и фронтендерами, когда
